--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,13 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "~2.3",
-        "larapack/dd": "^1.1"
+        "larapack/dd": "^1.1",
+        "codeclimate/php-test-reporter": "~0.3",
+        "mockery/mockery": "~0.9",
+        "phpunit/phpunit": "~5.0"
     },
     "scripts": {
-        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 app",
-        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 app"
+        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
+        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src"
     }
 }
