adicionado testes unitarios

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
             "Yampi\\Anymarket\\" : "src/Yampi/Anymarket"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\" : "tests"
+        }
+    },
     "require": {
         "guzzlehttp/guzzle": "^6.3"
     },
@@ -18,6 +23,7 @@
         "phpunit/phpunit": "~5.0"
     },
     "scripts": {
+        "test": "phpunit --colors=always",
         "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
         "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src"
     }
