--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,12 @@
         "larapack/dd": "^1.1",
         "codeclimate/php-test-reporter": "~0.3",
         "mockery/mockery": "~0.9",
-        "phpunit/phpunit": "~5.0"
+        "phpunit/phpunit": "^6.4"
     },
     "scripts": {
         "test": "phpunit --colors=always",
         "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
-        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src"
+        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src",
+        "fix-style-test": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 tests"
     }
 }
